# CLVizulayer

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  requirements.txt
.github/workflows/: build_test.yml
doc/: cl_ext_command_buffer_dot_print.asciidoc  cl_ext_dot_graph.asciidoc  cl_ext_dot_print.asciidoc
include/: cl_ext_command_buffer_dot_print.h  cl_ext_dot_graph.h  cl_ext_dot_print.h
samples/: README.md
samples/CLBlast/: README.md  trace.dot
samples/gromacs/: README.md  trace.dot
samples/lammps/: README.md  trace.dot
samples/lc0/: README.md  graph.txt  graph_0.dot  modified.dot  modified.txt  original.txt  trace.dot
samples/llama/: README.md  trace.dot
samples/opencv/: README.md  trace.dot
source/: CMakeLists.txt  cl_ext_command_buffer_dot_print.cpp  cl_ext_dot_graph.cpp  cl_ext_dot_print.cpp  io.cpp  io.h  logger.h  main.cpp  viz.cpp  viz.h  viz_context.cpp  viz_context.h  viz_dag.h  viz_instance.cpp  viz_instance.h  viz_node.h  viz_queue.h
test/: CMakeLists.txt  badly_behaved.cpp  barrier_multi_queue.cpp  barrier_no_wait_list.cpp  barrier_not_leaf_deps.cpp  barrier_with_wait_list.cpp  buffer_copy.cpp  buffer_copy_rect.cpp  buffer_fill.cpp  buffer_map.cpp  buffer_read_write.cpp  buffer_read_write_rect.cpp  buffer_to_image_copy.cpp  color.cpp  command-buffer.cpp  common.h  compound_edges.cpp  event_reuse.cpp  event_wait_not_leaf.cpp  ext_loading.cpp  image_copy.cpp  image_fill.cpp  image_map.cpp  image_read_write.cpp  image_to_buffer_copy.cpp  kernel_diamond.cpp  kernel_multi_queue.cpp  linear_kernel_no_wait.cpp  linear_kernel_out-of-order.cpp  lit.cfg.py  lit.site.cfg.py.in  marker_no_wait_list.cpp  marker_with_wait_list.cpp  mem_migration.cpp  native.cpp  ooo_loop.cpp  queue_finish_not_leaf.cpp  queue_reuse.cpp  release_queue.cpp  repeat_finish_leaf_nodes.cpp  (+14 more)
test/cl_ext_command_buffer_dot_print/: barrier_not_leaf_deps.cpp  barrier_with_wait_list.cpp  buffer_copy.cpp  buffer_copy_rect.cpp  buffer_fill.cpp  buffer_to_image_copy.cpp  cmd_buf_reuse.cpp  color.cpp  device_info_query.cpp  empty.cpp  image_copy.cpp  image_fill.cpp  image_to_buffer_copy.cpp  kernel_diamond.cpp  linear.cpp  multi_cmd_buf.cpp  multi_print.cpp  ndrange_kernel.cpp  negative_properties.cpp  platform_info_query.cpp  verbose_color.cpp
test/cl_ext_dot_graph/: device_info_query.cpp  events.cpp  leak.cpp  multi_dot.cpp  multi_queue.cpp  negative_device_info_query.cpp  negative_platform_info_query.cpp  null_filepath.cpp  overwrite_filename.cpp  platform_info_query.cpp  release_retain.cpp  single_node.cpp  uncaptured_commands.cpp  verbose.cpp  verbose_color.cpp
test/cl_ext_dot_print/: blocking_commands.cpp  color.cpp  command-buffer.cpp  device_info_query.cpp  events.cpp  leak.cpp  linear.cpp  multi_dot.cpp  multi_queue.cpp  negative_properties.cpp  negative_queues.cpp  negative_release_retain.cpp  null_filepath.cpp  overwrite_filename.cpp  platform_info_query.cpp  release_queue.cpp  release_retain.cpp  single_node.cpp  threading.cpp  uncaptured_commands.cpp  verbose.cpp  verbose_color.cpp  wait_for_events.cpp
test/ext/: events.cpp  leak.cpp  linear.cpp  multi_dot.cpp  multi_queue.cpp  negative_device_info_query.cpp  negative_platform_info_query.cpp  negative_release_retain.cpp  null_filepath.cpp  overwrite_filename.cpp  platform_info_query.cpp  release_retain.cpp  single_node.cpp  wait_for_events.cpp
test/verbose/: buffer_copy.cpp  buffer_copy_rect.cpp  buffer_fill.cpp  buffer_map.cpp  buffer_read_write.cpp  buffer_read_write_rect.cpp  buffer_to_image_copy.cpp  color.cpp  command-buffer.cpp  image_copy.cpp  image_fill.cpp  image_map.cpp  image_read_write.cpp  image_to_buffer_copy.cpp  kernel.cpp  mem_migration.cpp  svm_copy.cpp  svm_fill.cpp  svm_free.cpp  svm_map.cpp  svm_migrate.cpp  usm_copy.cpp  usm_fill.cpp
